# CppReflPlayground

./: .gitignore  CMakeLists.txt  README.md  使用文档.md  技术文档.md
CppReflPlayground/: field_traits.h  function_traits.h  main.cpp  reflect_core.h  reflect_utils.h  type_list.h  variable_traits.h
CppReflPlayground/include/dynamic_refl/: Any.h  Arithmetic.h  Class.h  Enum.h  MemberContainer.h  MemberFunction.h  MemberVariable.h  Pointer.h  Type.h  TypeRegistry.h  Vector.h  Void.h  container_operations.h  dynamic_refl_util.h  dynamic_reflect_core.h  invoke_impl.h
CppReflPlayground/include/static_refl/: container_traits.h  field_traits.h  function_traits.h  reflect_core.h  reflect_utils.h  type_list.h  variable_traits.h
CppReflPlayground/src/dynamic_refl/: Any.cpp  Arithmetic.cpp  Class.cpp  Enum.cpp  MemberContainer.cpp  MemberFunction.cpp  MemberVariable.cpp  Pointer.cpp  Type.cpp  TypeRegistry.cpp  Vector.cpp  Void.cpp  container_operations.cpp
CppReflPlayground/src/static_refl/: reflect_core.cpp
CppReflPlayground/tests/: constexpr_demo.cpp  main.cpp
